# BasicCMake-And-UnitTesting

./: .gitignore  CMakeLists.txt
include/: my_math.h
my_math_lib/: CMakeLists.txt
my_math_lib/include/: my_math.h
my_math_lib/src/: my_math.cpp
src/: main.cpp  my_math.cpp
tests/: test_my_math.cpp
